crayfish-macros/tests/trybuild/args_err.stderr
error: attributes only applys to struct, enum.
 --> $DIR/args_err.rs:4:1
  |
4 | mod foo {}
  | ^^^^^^^^^^
