crayfish-macros/tests/trybuild/args_err.rs
use crayfish_macros::*;

#[arg]
mod foo {}

pub fn main() {}
